Issue #1672416: Add to cart notification on mobile device unusable.
Reviewed-on: https://code.drupalcommerce.org/119
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default-normal.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default-normal.css
@@ -169,6 +169,19 @@
 /**********************************************
 * 5.3. Product page
 **********************************************/
+.commerce-kickstart-add-to-cart .commerce-product-title,
+.commerce-kickstart-add-to-cart .field,
+.commerce-kickstart-add-to-cart .commerce-product-sku {
+  clear: none;
+}
+.commerce-kickstart-add-to-cart .field,
+.commerce-kickstart-add-to-cart .commerce-product-sku {
+  clear: none;
+  float: none;
+}
+.commerce-kickstart-add-to-cart .field-name-field-images {
+  float: left;
+}
 /* Cloud zoom */
 .node-product-type .cloud-zoom-gallery-thumbs {
   clear: none;
