--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
@@ -375,6 +375,10 @@ body {
 .commerce-add-to-cart label {
   float: left;
 }
+.commerce-kickstart-add-to-cart .field-name-field-images {
+  clear: left;
+  float: left;
+}
 /**************************************************
 * --
 * 6. Kickstart specific
